# SocialRed

./: CMakeLists.txt  RedSocial.cpp  RedSocial.h  SocialRed_Pro_Documentacion.docx  main.cpp
include/: MatrizAdyacencia.h  Menu.h  RedSocial.h
src/: MatrizAdyacencia.cpp  Menu.cpp  RedSocial.cpp  main.cpp
